--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "main": "server.js",
   "scripts": {
     "build": "cd frontend && npm run build",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build", 
     "install-client": "cd frontend && npm install ",
     "heroku-postbuild": "npm run install-client && npm run build",
     "client": "cd frontend && npm start",
